Overflow Fix

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,11 @@
   box-sizing: border-box;
 }
 
+body {
+  width: 100vw;
+  overflow-x: hidden;
+}
+
 .hide {
   display: none !important;
 }
